# fastapi-jwt

./: README.md  pyproject.toml
src/: main.py
src/models/: user.py
src/routes/: auth.py
