[tool.poetry]
name = "jwt-tutorial"
version = "0.1.0"
description = ""
authors = ["Ssuwani <jsuwan961205@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
